WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
270191
[UnifiedPDF] Annotation hover rectangle is wrong on rotated pages
https://bugs.webkit.org/show_bug.cgi?id=270191
Summary
[UnifiedPDF] Annotation hover rectangle is wrong on rotated pages
Sammy Gill
Reported
2024-02-27 13:32:28 PST
If a page is rotated and the mouse cursor is placed over a text field, then the blue hover rectangle that is supposed to appear either does not appear or appears in the wrong location. The rectangle appears correctly if the page is not rotated at all
Attachments
Add attachment
proposed patch, testcase, etc.
Sammy Gill
Comment 1
2024-02-27 13:32:46 PST
rdar://122931284
Sammy Gill
Comment 2
2024-02-27 13:42:46 PST
Pull request:
https://github.com/WebKit/WebKit/pull/25189
EWS
Comment 3
2024-02-27 15:03:49 PST
Committed
275411@main
(a7d90be9008d): <
https://commits.webkit.org/275411@main
> Reviewed commits have been landed. Closing PR #25189 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug