[UnifiedPDF] Annotation hover rectangle is wrong on rotated pages https://bugs.webkit.org/show_bug.cgi?id=270191 rdar://122931284

Reviewed by Simon Fraser.

This appears to be the same issue that 275351@main fixed for selections
but this time for annotations. To make sure that our painting code
displays the blue rectangle properly we need to factor out the rotation
that is implicit in bounds of the annotation that we get back from
PDFKit.

* Source/WebKit/WebProcess/Plugins/PDF/UnifiedPDF/UnifiedPDFPlugin.mm:
(WebKit::UnifiedPDFPlugin::paintPDFContent):

Canonical link: https://commits.webkit.org/275411@main